--- a/vignettes/parallelization.Rmd
+++ b/vignettes/parallelization.Rmd
@@ -135,7 +135,7 @@ autoplot(obj.fun, render.levels = TRUE)
 ctrl = makeMBOControl(propose.points = 2)
 ctrl = setMBOControlInfill(ctrl, crit = crit.cb)
 ctrl = setMBOControlMultiPoint(ctrl, method = "cb")
-ctrl = setMBOControlTermination(control = iters = 5)
+ctrl = setMBOControlTermination(ctrl, iters = 5)
 design = generateDesign(n = 5*8, par.set = getParamSet(obj.fun))
 library(parallelMap)
 parallelStartMulticore(cpus = 2, show.info = FALSE)
