--- a/vignettes/noisy_optimization.Rmd
+++ b/vignettes/noisy_optimization.Rmd
@@ -25,12 +25,12 @@ knitr::knit_hooks$set(document = function(x){
 
 This vignette will give you a short overview about techniques in **mlrMBO** to handle optimization of noisy objective functions.
 
-You can also try to reduce noise by using parallel evalauations of the same setting as explained in the Vignette about parallelization.
+You can also try to reduce noise by using parallel evaluations of the same setting as explained in the Vignette about parallelization.
 
 ## Infill criteria for noiy optimization
 
 Like always let's start with the function we want to optimize, but this time it will be noisy.
-Note that Kriging requires heteroscedasticity but slight dependencies of the variance on the `x` can be accapatble like in the following example:
+Note that Kriging requires heteroscedasticity but slight dependencies of the variance on the `x` can be acceptable like in the following example:
 
 ```{r objective_function}
 library(mlrMBO)
@@ -52,7 +52,7 @@ Preferably the _best predicted_ value of `y` is taken as the prediction of the s
 ctrl = makeMBOControl(final.method = "best.predicted", final.evals = 10)
 ```
 
-For noisy optimization we there are two infill.criteria that are recomended:
+For noisy optimization we there are two infill.criteria that are recommended:
 * `aei`: Augmented Expected Improvement
 * `eqi`: Expected Quantile Improvement
 
