--- a/vignettes/mixed_space_optimization.Rmd
+++ b/vignettes/mixed_space_optimization.Rmd
@@ -148,3 +148,79 @@ And let's visualize the results:
 ```{r plot_example_run_2d, warning=FALSE}
 plotExampleRun(ex.run2, iters = c(1L, 2L, 10L), pause = FALSE)
 ```
+
+## Improved Example for Dependent Parameters
+
+Looking back at our example we notice that the behavior of the function for $j$ totally changes depending on the chosen _method_.
+If such dependency is known beforehand it totally makes sense to let the surrogate know that $j$ should be treated differently depending on the chosen _method_.
+This is done by introducing a new variable for each _method_.
+Assuming we can not change the objective function `fun` we can easily build a _wrapper_ to achieve that.
+
+```{r wrapper}
+wrap.fun = function(x) {
+  x$j = if (x$method == "a") x$ja else x$jb
+  x = dropNamed(x, c("ja", "jb"))
+  fun(x)
+}
+```
+
+We have to also change the parameter space accordingly:
+
+```{r wrapper_par_space}
+ps.wrap = makeParamSet(
+  makeDiscreteParam("method", values = c("a", "b")),
+  makeNumericParam("ja", lower = 0,upper = 2 * pi, requires = quote(method == "a")),
+  makeNumericParam("jb", lower = 0,upper = 2 * pi, requires = quote(method == "b"))
+  )
+```
+
+Let's wrap this up in a new objective function using `smoof`:
+
+```{r wrapper_smoof}
+objfun3 = makeSingleObjectiveFunction(
+  name = "mixed_example: Dependent J",
+  fn = wrap.fun,
+  par.set = ps.wrap,
+  has.simple.signature = FALSE,
+  minimize = TRUE
+)
+```
+
+And now let's directly run the optimization without further changing the control object from above:
+
+```{r wrapper_run}
+design3 = generateDesign(n = 8, par.set = getParamSet(objfun3))
+run3 = mbo(objfun3, design = design3, control = control2, show.info = FALSE)
+run3$x
+run3$y
+```
+Unfortunately our problem is now categorical and 3-dimensional to the eyes of `mlrMBO` so there is no implemented method to visualize the optimization.
+However we can analyze the residuals to see which surrogate was more accurate:
+
+```{r residual_comparison}
+op2 = as.data.frame(run2$opt.path)
+op3 = as.data.frame(run3$opt.path)
+
+# residual variance of the surrogate model for the first example
+var(op2$mean - op2$y, na.rm = TRUE)
+# residual variance of the advanced surrogate model with independetly treat ed jaand jb
+var(op3$mean - op3$y, na.rm = TRUE)
+```
+As you can see our new approach could improve the accuracy of the surrogate.
+
+
+## Remarks
+
+In comparison to optimization on a purely numerical search space with functions that are not too crazy mixed space optimization comes with some twists that we want to mention here.
+
+### Random Forests as surrogate
+
+The biggest drawback of using _random forests_ versus _Kriging_ is the lack of _"spacial uncertainty"_.
+Whereas in Kriging can model uncertainty in areas where no observations are made thanks to the co-variance that gets higher for points that are far away from already visited points, the random forest lacks of this information.
+For the random forest the uncertainty is based on the diversity of the results of the individual individual forests.
+Naturally, the diversity is higher in areas where the results of the objective function are diverse.
+For deterministic functions or functions with just a little noise this is mainly the case in the proximity of steep slopes of the objective function.
+This can lead to proposed points that are located at slopes but not actually in the _valley_.
+Furthermore the diversity of the prediction of the individual trees can also be quite low outside the area of observed values leading to less proposals in the area between proposed points and the actual boundaries of the search space. 
+To combat this problem it can make sense to manually add points at the boundaries of the search space to the initial design. 
+
